--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <title>Seldon Task</title>
 </head>
 
-<body style="background-color: #dddddd; font-family: monospace;">
+<body style="background-color: #d0d0d0; font-family: monospace;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
